--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "fetch.js",
   "devDependencies": {
+    "es6-promise": "1.0.0",
     "qunit": "1.14.0"
   },
   "ignore": [
