--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "fetch",
+  "version": "0.2.1",
+  "main": "fetch.js",
   "private": true,
   "devDependencies": {
     "bower": "1.3.8",
