--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "bower": "1.3.8",
     "jshint": "2.5.2",
     "node-qunit-phantomjs": "0.2.2"
+  },
+  "dependencies": {
+    "bluebird": "^2.3.10",
+    "xmlhttprequest": "^1.6.0"
   }
 }
