Add worker to test lint config

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -10,11 +10,13 @@
   "undef": true,
   "unused": true,
   "trailing": true,
-  "boss": true,
   "asi": true,
+  "boss": true,
+  "esnext": true,
   "sub": true,
   "eqnull": true,
   "browser": true,
+  "worker": true,
   "globals": {
     "MockXHR": false,
     "QUnit": false,
