Allow headers in tests

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -21,6 +21,9 @@
     "MockXHR": false,
     "QUnit": false,
     "fetch": false,
+    "Headers": false,
+    "Request": false,
+    "Response": false,
     "module": false,
     "test": false,
     "asyncTest": false,
