--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -22,6 +22,8 @@
     "Headers": false,
     "Request": false,
     "Response": false,
+    "mocha": false,
+    "chai": false,
     "suite": false,
     "test": false,
     "assert": false
