--- a/package.json
+++ b/package.json
@@ -2,6 +2,19 @@
   "name": "whatwg-fetch",
   "version": "0.6.0",
   "main": "fetch.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/github/fetch.git"
+  },
+  "bugs": {
+    "url": "https://github.com/github/fetch/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/github/fetch/blob/master/LICENSE"
+    }
+  ],
   "devDependencies": {
     "bower": "1.3.8",
     "chai": "1.10.0",
