--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "whatwg-fetch",
   "version": "0.6.1",
+  "repository": "github/fetch",
   "main": "fetch.js",
   "devDependencies": {
     "bower": "1.3.8",
