--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "mocha-phantomjs": "3.5.2",
     "mocha": "2.1.0",
     "phantomjs": "1.9.13"
-  }
+  },
+  "files" : [
+    "LICENSE",
+    "fetch.js"
+  ]
 }
