--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "bower": "1.3.8",
     "chai": "1.10.0",
+    "es6-promise": "1.0.0",
     "jshint": "2.5.2",
     "mocha-phantomjs": "3.5.2",
     "mocha": "2.1.0",
