--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -19,6 +19,7 @@
   "node": true,
   "worker": true,
   "globals": {
+    "Promise": true,
     "fetch": false,
     "Headers": false,
     "Request": false,
