Exercise both polyfill and native `fetch` in test suite
Before, in browsers that had native `fetch` implementation the polyfill
code was never exercised by the test suite. This ensures that both
implementations are exercised.

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -12,6 +12,7 @@
     "chai": false,
     "suite": false,
     "setup": false,
+    "suiteSetup": false,
     "test": false,
     "assert": false
   }
