Have test jshintrc extend project's global one

--- a/.jshintrc
+++ b/.jshintrc
@@ -17,5 +17,8 @@
   "esnext": true,
   "eqnull": true,
   "browser": true,
-  "worker": true
+  "worker": true,
+  "globals": {
+    "JSON": false
+  }
 }
