--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,22 +1,8 @@
 {
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "indent": 2,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "quotmark": true,
-  "undef": true,
-  "unused": true,
-  "trailing": true,
-  "asi": true,
-  "boss": true,
-  "esnext": true,
+  "extends": "../.jshintrc",
+  "es3": false,
+  "strict": false,
   "sub": true,
-  "eqnull": true,
-  "browser": true,
-  "worker": true,
   "globals": {
     "fetch": false,
     "Headers": false,
