Support URLSearchParams POST body
https://fetch.spec.whatwg.org/#body-mixin

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
   "browser": true,
   "worker": true,
   "globals": {
-    "JSON": false
+    "JSON": false,
+    "URLSearchParams": false
   }
 }
