--- a/package.json
+++ b/package.json
@@ -4,12 +4,7 @@
   "version": "0.11.0",
   "main": "fetch.js",
   "repository": "github/fetch",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/github/fetch/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "devDependencies": {
     "bower": "1.3.8",
     "chai": "1.10.0",
