--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "chai": "1.10.0",
     "jshint": "2.8.0",
     "mocha": "2.1.0",
-    "mocha-phantomjs": "3.5.2",
-    "phantomjs": "1.9.19",
+    "mocha-phantomjs-core": "2.0.1",
     "url-search-params": "0.5.0"
   },
   "files": [
