--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "github/fetch",
   "license": "MIT",
   "devDependencies": {
-    "bower": "1.3.8",
+    "bower": "^1.7.9",
     "chai": "1.10.0",
     "jshint": "2.8.0",
     "mocha": "2.1.0",
