--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -8,6 +8,7 @@
     "Headers": false,
     "Request": false,
     "Response": false,
+    "ReadableStream": false,
     "mocha": false,
     "chai": false,
     "suite": false,
