--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "jshint": "2.8.0",
     "mocha": "2.1.0",
     "mocha-phantomjs-core": "2.0.1",
-    "url-search-params": "0.5.0",
-    "web-streams-polyfill": "^1.3.0"
+    "url-search-params": "0.5.0"
   },
   "files": [
     "LICENSE",
