--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "repository": "github/fetch",
   "license": "MIT",
   "devDependencies": {
-    "bower": "1.3.8",
     "chai": "1.10.0",
     "jshint": "2.8.0",
     "mocha": "2.1.0",
     "mocha-phantomjs-core": "2.0.1",
+    "promise-polyfill": "6.0.2",
     "url-search-params": "0.6.1"
   },
   "files": [
