Fixed web workers

--- a/.jshintrc
+++ b/.jshintrc
@@ -23,6 +23,7 @@
     "URLSearchParams": false,
     "AbortController": false,
     "AbortSignal": false,
-    "DOMException": false
+    "DOMException": false,
+    "Event": false
   }
 }
