--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "github/fetch",
   "license": "MIT",
   "devDependencies": {
+    "abortcontroller-polyfill": "1.1.1",
     "chai": "1.10.0",
     "jshint": "2.8.0",
     "mocha": "2.1.0",
