--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
     "sourceType": "module"
   },
   "globals": {
+    "WHATWGFetch": true,
     "ArrayBuffer": true,
     "DataView": true,
     "Promise": true,
