Rename `prepublish` step to `prepare`

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "scripts": {
     "karma": "karma start ./test/karma.config.js --no-single-run --auto-watch",
-    "prepublish": "make dist/fetch.umd.js",
+    "prepare": "make dist/fetch.umd.js",
     "pretest": "make",
     "test": "karma start ./test/karma.config.js && karma start ./test/karma-worker.config.js"
   }
