--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "karma": "^3.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-detect-browsers": "^2.3.2",
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
     "karma-safari-launcher": "^1.0.0",
+    "karma-safaritechpreview-launcher": "0.0.6",
     "mocha": "^4.0.1",
     "promise-polyfill": "6.0.2",
     "rollup": "^0.59.1",
