--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "scripts": {
     "karma": "karma start ./test/karma.config.js --no-single-run --auto-watch",
-    "prepare": "make dist/fetch.umd.js",
+    "prepare": "make dist/fetch.umd.js dist/fetch.umd.js.flow",
     "pretest": "make",
     "test": "karma start ./test/karma.config.js && karma start ./test/karma-worker.config.js"
   }
