Compatibility with newer eslint-plugin-github

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
       "globals": {
         "assert": true,
         "chai": true,
-        "FileReaderSync": true
+        "FileReaderSync": true,
+        "Mocha": true
       }
     },
     {
