--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "dist/fetch.umd.js",
     "dist/fetch.umd.js.flow",
     "fetch.js",
-    "fetch.js.flow"
+    "fetch.js.flow",
+    "index.d.ts"
   ],
   "scripts": {
     "karma": "karma start ./test/karma.config.js --no-single-run --auto-watch",
     "prepare": "make dist/fetch.umd.js dist/fetch.umd.js.flow",
     "pretest": "make",
     "test": "karma start ./test/karma.config.js && karma start ./test/karma-worker.config.js"
-  }
+  },
+  "typings": "index.d.ts"
 }
