--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,8 +1,22 @@
 {
-  "extends": "../.jshintrc",
-  "es3": false,
-  "strict": false,
+  "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "indent": 2,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "quotmark": true,
+  "undef": true,
+  "unused": true,
+  "trailing": true,
+  "asi": true,
+  "boss": true,
+  "esnext": true,
   "sub": true,
+  "eqnull": true,
+  "browser": true,
+  "worker": true,
   "globals": {
     "fetch": false,
     "Headers": false,
@@ -12,7 +26,6 @@
     "chai": false,
     "suite": false,
     "setup": false,
-    "suiteSetup": false,
     "test": false,
     "assert": false
   }
