Use globalThis as the global object if it exists

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "DataView": true,
     "Promise": true,
     "Symbol": true,
-    "Uint8Array": true
+    "Uint8Array": true,
+    "globalThis": true
   },
   "extends": [
     "plugin:github/browser"
