--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,19 @@
-{
-  "name": "fetch",
-  "main": "fetch.js",
-  "ignore": [
-    ".*",
-    "*.md",
-    "examples/",
-    "Makefile",
-    "package.json",
-    "script/",
-    "test/"
-  ]
-}
+
+import 'yet-another-abortcontroller-polyfill'
+import {fetch} from 'whatwg-fetch'
+
+// use native browser implementation if it supports aborting
+const abortableFetch = ('signal' in new Request('')) ? window.fetch : fetch
+
+const controller = new AbortController()
+
+abortableFetch('/avatars', {
+  signal: controller.signal
+}).catch(function(ex) {
+  if (ex.name === 'AbortError') {
+    console.log('request aborted')
+  }
+})
+
+// some time later...
+controller.abort()
