Remove error that causes ie11 to be unresponsive
The headers of requests to Zendesk and Sentry contain colons, e.g.

:authority
:scheme
:method
:path

Those headers cause this error to be thrown

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whatwg-fetch",
+  "name": "fetch-ie11",
   "description": "A window.fetch polyfill.",
   "version": "3.6.2",
   "main": "./dist/fetch.umd.js",
