--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "devDependencies": {
     "abortcontroller-polyfill": "^1.1.9",
+    "auto-changelog": "^2.4.0",
     "chai": "^4.1.2",
     "eslint": "^7.20.0",
     "karma": "^3.0.0",
@@ -35,6 +36,7 @@
     "karma": "karma start ./test/karma.config.js --no-single-run --auto-watch",
     "prepare": "make dist/fetch.umd.js dist/fetch.umd.js.flow",
     "pretest": "make",
-    "test": "karma start ./test/karma.config.js && karma start ./test/karma-worker.config.js"
+    "test": "karma start ./test/karma.config.js && karma start ./test/karma-worker.config.js",
+    "version": "auto-changelog -p && git add CHANGELOG.md"
   }
 }
