Fix/hash pin and dependabot (#2)
* [StepSecurity] Apply security best practices

Signed-off-by: StepSecurity Bot <bot@stepsecurity.io>

* Update .github/dependabot.yml

Signed-off-by: Joyce <joycebrum@google.com>

---------

Signed-off-by: StepSecurity Bot <bot@stepsecurity.io>
Signed-off-by: Joyce <joycebrum@google.com>
Co-authored-by: StepSecurity Bot <bot@stepsecurity.io>

--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -13,7 +13,7 @@ jobs:
       issues: write
       pull-requests: write
     steps:
-      - uses: dessant/lock-threads@v2
+      - uses: dessant/lock-threads@f1a42f0f44eb83361d617a014663e1a76cf282d2 # v2.1.2
         with:
           github-token: ${{ github.token }}
           issue-lock-inactive-days: '180'
