--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,4 +8,4 @@ updates:
       github-actions:
         patterns:
           - "*"
-    # open-pull-requests-limit: 3
+    open-pull-requests-limit: 3
